--- a/about.html
+++ b/about.html
@@ -304,51 +304,64 @@
             <div class="about-data" data-aos="fade-down" data-aos-duration="2400">
                 <span class="mini-span">Our Projects</span>
                 <h2 class="sub-title">Latest Projects & Details</h2>
-             <p>Ensite, a pioneering initiative in manufacturing, epitomizes the fusion of digital innovation and industry expertise. Through Ensite, manufacturers leverage cutting-edge technologies like AI and IoT to optimize processes, boost efficiency, and ensure sustainability. This collaborative platform facilitates streamlined operations and supply chain visibility, propelling the industry towards a future defined by innovation and agility.</p>
+                <p>Ensite, a pioneering initiative in manufacturing, epitomizes the fusion of digital innovation and
+                    industry expertise. Through Ensite, manufacturers leverage cutting-edge technologies like AI and IoT
+                    to optimize processes, boost efficiency, and ensure sustainability. This collaborative platform
+                    facilitates streamlined operations and supply chain visibility, propelling the industry towards a
+                    future defined by innovation and agility.</p>
 
             </div>
 
             <div class="rowproject">
                 <div class="row justify-content-center">
-                    <div class="col-md-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2400">
+                    <div class="col-md-6 col-xl-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
                         <div class="projects-holder">
                             <div class="projects-image">
-                                <img src="assets/images/project1.webp" alt="projects" height="340" width="510" loading="lazy">
+                                <img src="assets/images/project1.webp" alt="projects" height="340" width="510"
+                                    loading="lazy">
                             </div>
                             <div class="btm-datahere">
                                 <span class="projectdate">February 19, 2021 </span>
                                 <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi consectetur earum quis alias dicta eligendi.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
+                                    recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
+                                    consectetur earum quis alias dicta eligendi.</p>
                                 <div class="readmore-icon">
                                     <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2400">
+                    <div class="col-md-6 col-xl-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
                         <div class="projects-holder">
                             <div class="projects-image">
-                                <img src="assets/images/project2.webp" alt="projects" height="340" width="510" loading="lazy">
+                                <img src="assets/images/project2.webp" alt="projects" height="340" width="510"
+                                    loading="lazy">
                             </div>
                             <div class="btm-datahere">
                                 <span class="projectdate">February 19, 2021 </span>
                                 <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi consectetur earum quis alias dicta eligendi.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
+                                    recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
+                                    consectetur earum quis alias dicta eligendi.</p>
                                 <div class="readmore-icon">
                                     <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2400">
+                    <div class="col-md-6 col-xl-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
                         <div class="projects-holder">
                             <div class="projects-image">
-                                <img src="assets/images/project3.webp" alt="projects" height="340" width="510" loading="lazy">
+                                <img src="assets/images/project3.webp" alt="projects" height="340" width="510"
+                                    loading="lazy">
                             </div>
                             <div class="btm-datahere">
                                 <span class="projectdate">February 19, 2021 </span>
                                 <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi consectetur earum quis alias dicta eligendi.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
+                                    recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
+                                    consectetur earum quis alias dicta eligendi.</p>
                                 <div class="readmore-icon">
                                     <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                                 </div>
