about done compltet here

--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
 
                 <div class="main-navlink">
                     <ul class="navlist">
-                        <li><a href="index.html" title="Home" class="activlink">Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About">About</a>
+                        <li><a href="index.html" title="Home" >Home</a></li>
+                        <li class="menu-item-has-children"><a href="about.html" title="About" class="activlink">About</a>
                             <ul class="sub-menu">
                                 <li><a href="#" title="Who We are"> Who We are </a></li>
                                 <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
@@ -135,25 +135,25 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-1.webp" alt="engineering" title="engineering"
+                                        <img src="assets/images/acrdean-1.webp" alt="engineering" 
                                             height="600" width="600" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-2.webp" alt="engineering" title="engineering"
+                                        <img src="assets/images/acrdean-2.webp" alt="engineering" 
                                             height="600" width="600" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-3.webp" alt="engineering" title="engineering"
+                                        <img src="assets/images/acrdean-3.webp" alt="engineering" 
                                             height="600" width="600" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-4.webp" alt="engineering" title="engineering"
+                                        <img src="assets/images/acrdean-4.webp" alt="engineering" 
                                             height="600" width="600" loading="lazy">
                                     </div>
                                 </div>
