--- a/about.html
+++ b/about.html
@@ -74,8 +74,9 @@
 
                 <div class="main-navlink">
                     <ul class="navlist">
-                        <li><a href="index.html" title="Home" >Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About" class="activlink">About</a>
+                        <li><a href="index.html" title="Home">Home</a></li>
+                        <li class="menu-item-has-children"><a href="about.html" title="About"
+                                class="activlink">About</a>
                             <ul class="sub-menu">
                                 <li><a href="#" title="Who We are"> Who We are </a></li>
                                 <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
@@ -135,26 +136,26 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-1.webp" alt="engineering" 
-                                            height="600" width="600" loading="lazy">
+                                        <img src="assets/images/acrdean-1.webp" alt="engineering" height="600"
+                                            width="600" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-2.webp" alt="engineering" 
-                                            height="600" width="600" loading="lazy">
+                                        <img src="assets/images/acrdean-2.webp" alt="engineering" height="600"
+                                            width="600" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-3.webp" alt="engineering" 
-                                            height="600" width="600" loading="lazy">
+                                        <img src="assets/images/acrdean-3.webp" alt="engineering" height="600"
+                                            width="600" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="sliderabout">
-                                        <img src="assets/images/acrdean-4.webp" alt="engineering" 
-                                            height="600" width="600" loading="lazy">
+                                        <img src="assets/images/acrdean-4.webp" alt="engineering" height="600"
+                                            width="600" loading="lazy">
                                     </div>
                                 </div>
                             </div>
@@ -313,58 +314,52 @@
             </div>
 
             <div class="rowproject">
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-xl-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
-                        <div class="projects-holder">
-                            <div class="projects-image">
-                                <img src="assets/images/project1.webp" alt="projects" height="340" width="510"
-                                    loading="lazy">
-                            </div>
-                            <div class="btm-datahere">
-                                <span class="projectdate">February 19, 2021 </span>
-                                <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
-                                    recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
-                                    consectetur earum quis alias dicta eligendi.</p>
-                                <div class="readmore-icon">
-                                    <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
-                                </div>
+                <div class="gridproject">
+                    <div class="projects-holder">
+                        <div class="projects-image">
+                            <img src="assets/images/project1.webp" alt="projects" height="340" width="510"
+                                loading="lazy">
+                        </div>
+                        <div class="btm-datahere">
+                            <span class="projectdate">February 19, 2021 </span>
+                            <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
+                                recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
+                                consectetur earum quis alias dicta eligendi.</p>
+                            <div class="readmore-icon">
+                                <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
-                        <div class="projects-holder">
-                            <div class="projects-image">
-                                <img src="assets/images/project2.webp" alt="projects" height="340" width="510"
-                                    loading="lazy">
-                            </div>
-                            <div class="btm-datahere">
-                                <span class="projectdate">February 19, 2021 </span>
-                                <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
-                                    recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
-                                    consectetur earum quis alias dicta eligendi.</p>
-                                <div class="readmore-icon">
-                                    <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
-                                </div>
+                    <div class="projects-holder">
+                        <div class="projects-image">
+                            <img src="assets/images/project2.webp" alt="projects" height="340" width="510"
+                                loading="lazy">
+                        </div>
+                        <div class="btm-datahere">
+                            <span class="projectdate">February 19, 2021 </span>
+                            <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
+                                recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
+                                consectetur earum quis alias dicta eligendi.</p>
+                            <div class="readmore-icon">
+                                <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-4" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
-                        <div class="projects-holder">
-                            <div class="projects-image">
-                                <img src="assets/images/project3.webp" alt="projects" height="340" width="510"
-                                    loading="lazy">
-                            </div>
-                            <div class="btm-datahere">
-                                <span class="projectdate">February 19, 2021 </span>
-                                <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
-                                    recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
-                                    consectetur earum quis alias dicta eligendi.</p>
-                                <div class="readmore-icon">
-                                    <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
-                                </div>
+                    <div class="projects-holder">
+                        <div class="projects-image">
+                            <img src="assets/images/project3.webp" alt="projects" height="340" width="510"
+                                loading="lazy">
+                        </div>
+                        <div class="btm-datahere">
+                            <span class="projectdate">February 19, 2021 </span>
+                            <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero natus
+                                recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga, nisi
+                                consectetur earum quis alias dicta eligendi.</p>
+                            <div class="readmore-icon">
+                                <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
