--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             </div>
         </div>
     </header>
+
+    <div class="margin-top home"></div>
     <!-- HEADER END -->
 
     <!-- HOME BANNER  -->
