code update projects page

--- a/about.html
+++ b/about.html
@@ -80,15 +80,14 @@
                             <ul class="sub-menu">
                                 <li><a href="#" title="Who We are"> Who We are </a></li>
                                 <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
-                                <li><a href="#" title="Environmental Health and safety "> Environmental Health and
-                                        safety </a></li>
+                                <li><a href="faq.html" title="Environmental Health And Safety">Environmental Health And Safety</a></li>
                                 <li><a href="#" title="Executive Team "> Executive Team </a></li>
                                 <li><a href="#" title="Awards Recognitions"> Awards Recognitions </a></li>
                             </ul>
 
                         </li>
                         <li><a href="#" title="Service">Service</a></li>
-                        <li><a href="#" title="Projects">Projects</a></li>
+                        <li><a href="projects.html" title="Projects">Projects</a></li>
                         <li><a href="#" title="Testimonials">Testimonials</a></li>
                     </ul>
                 </div>
@@ -282,14 +281,8 @@
                 <div class="cuter-inside">
                     <span class="mini-span">Why Choose Us </span>
                     <h2 class="sub-title">We Are Are Leader In Industiral Market</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud xercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud xercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo
-                    </p>
+                    <p>We pride ourselves on being industry leaders in sheet metal aluminum fabrication. With cutting-edge technology and a team of experienced professionals, we guarantee superior quality and precision in every product. Our dedication to innovation enables us to meet and exceed the unique requirements of our clients, providing tailored solutions that ensure satisfaction and success. When you choose us, you're choosing excellence, reliability, and unparalleled expertise in sheet metal aluminum manufacturing.</p>
+                  
                     <div class="universal-anchor white">
                         <a href="#" title="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
@@ -370,6 +363,119 @@
     <!-- OUR PROJECT END -->
 
 
+    <!-- FAQ  -->
+    <!-- <section class="faqabout-sec">
+        <div class="container">
+            <div class="about-data" data-aos="fade-down" data-aos-duration="2400">
+                <span class="mini-span">FAQ</span>
+                <h2 class="sub-title">Popular Question</h2>
+                <p>Ensite, a pioneering initiative in manufacturing, epitomizes the fusion of digital innovation and
+                    industry expertise. Through Ensite, manufacturers leverage cutting-edge technologies like AI and IoT
+                    to optimize processes, boost efficiency, and ensure sustainability. This collaborative platform
+                    facilitates streamlined operations and supply chain visibility, propelling the industry towards a
+                    future defined by innovation and agility.</p>
+
+            </div>
+            <div class="faqhold">
+                <div class="row">
+                    
+                    <div class="col-md-12">
+                        <div class="accordean-holder">
+                            <div class="grid-accordean">
+                                <div class="title-accordean">
+                                    <h2 class="acrdn-title">What materials do you work with?</h2>
+                                </div>
+                                <div class="acrdean-icon">
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="acrdean-data">
+                               <p>We work with a variety of metals, including steel, aluminum, copper, brass, and alloys. Our experienced team is proficient in handling different grades and types of metal to ensure the highest quality and performance of the parts we manufacture.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="accordean-holder">
+                            <div class="grid-accordean">
+                                <div class="title-accordean">
+                                    <h2 class="acrdn-title">What is your production capacity?</h2>
+                                </div>
+                                <div class="acrdean-icon">
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="acrdean-data">
+                               <p>Our production capacity depends on the complexity and quantity of the parts being manufactured. We have invested in state-of-the-art machinery and employ efficient production processes to ensure timely delivery without compromising on quality. For specific inquiries regarding production capacity, please contact our sales team.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="accordean-holder">
+                            <div class="grid-accordean">
+                                <div class="title-accordean">
+                                    <h2 class="acrdn-title"> Can you accommodate custom orders?</h2>
+                                </div>
+                                <div class="acrdean-icon">
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="acrdean-data">
+                               <p>Yes, we specialize in custom metal part manufacturing. Whether you require modifications to existing designs or entirely new parts developed from scratch, our engineering team will work closely with you to understand your requirements and deliver tailor-made solutions that meet your needs.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="accordean-holder">
+                            <div class="grid-accordean">
+                                <div class="title-accordean">
+                                    <h2 class="acrdn-title"> What quality assurance  do you have?</h2>
+                                </div>
+                                <div class="acrdean-icon">
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="acrdean-data">
+                              <p>Quality is our top priority, and we adhere to stringent quality control measures throughout the manufacturing process. From material inspection and machining to finishing and final inspection, we maintain strict adherence to industry standards to ensure that every part meets the required specifications and exceeds customer expectations.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="accordean-holder">
+                            <div class="grid-accordean">
+                                <div class="title-accordean">
+                                    <h2 class="acrdn-title">What is your lead time for orders?</h2>
+                                </div>
+                                <div class="acrdean-icon">
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="acrdean-data">
+                             <p>Our lead time for orders varies depending on factors such as the complexity of the parts, order volume, and current production schedule. We strive to provide accurate lead time estimates for each order and work diligently to meet our customers' deadlines while maintaining the highest standards of quality.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="accordean-holder">
+                            <div class="grid-accordean">
+                                <div class="title-accordean">
+                                    <h2 class="acrdn-title">How do you handle logistics?</h2>
+                                </div>
+                                <div class="acrdean-icon">
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="acrdean-data">
+                            <p>We have established partnerships with reliable logistics providers to ensure safe and timely delivery of our products to customers worldwide. Whether you require local delivery or international shipping, we will coordinate the logistics to ensure that your order reaches you in optimal condition and within the agreed timeframe.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- FAQ END -->
+
+
 
 
 
@@ -390,10 +496,10 @@
                     <div class="link-holder">
                         <h5 class="quick-links">Quick Links</h5>
                         <ul class="footer-list">
-                            <li><a href="#" title="Home">Home</a></li>
-                            <li><a href="#" title="About">About</a></li>
+                            <li><a href="index.html" title="Home">Home</a></li>
+                            <li><a href="about.html" title="About">About</a></li>
                             <li><a href="#" title="Services">Services</a></li>
-                            <li><a href="#" title="Projects">Projects</a></li>
+                            <li><a href="faq.html" title="Projects">FAQ</a></li>
                             <li><a href="#" title="Contact us">Contact us</a></li>
                         </ul>
                     </div>
