--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="index.html"><img src="assets/images/transparentlogo.webp" alt="cladding"
                                 title="cladding" height="83" width="376"></a>
                         <!-- <a href="index.html"><img src="assets/images/blacklogo.webp" alt="cladding" title="cladding"
-                            height="83" width="376"></a> -->
+                        height="83" width="376"></a> -->
                     </div>
                     <div class="toogleicon">
                         <i class="fa-solid fa-bars"></i>
@@ -73,19 +73,19 @@
                 <div class="main-navlink">
                     <ul class="navlist">
                         <li><a href="index.html" title="Home" class="activlink">Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About">About</a>
+                        <li class="menu-item-has-children"><a href="about.html" title="About"
+                                >About</a>
                             <ul class="sub-menu">
                                 <li><a href="#" title="Who We are"> Who We are </a></li>
                                 <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
-                                <li><a href="#" title="Environmental Health and safety "> Environmental Health and
-                                        safety </a></li>
+                                <li><a href="faq.html" title="Environmental Health And Safety">Environmental Health And Safety</a></li>
                                 <li><a href="#" title="Executive Team "> Executive Team </a></li>
                                 <li><a href="#" title="Awards Recognitions"> Awards Recognitions </a></li>
                             </ul>
 
                         </li>
                         <li><a href="#" title="Service">Service</a></li>
-                        <li><a href="#" title="Projects">Projects</a></li>
+                        <li><a href="projects.html" title="Projects">Projects</a></li>
                         <li><a href="#" title="Testimonials">Testimonials</a></li>
                     </ul>
                 </div>
@@ -676,10 +676,10 @@
                     <div class="link-holder">
                         <h5 class="quick-links">Quick Links</h5>
                         <ul class="footer-list">
-                            <li><a href="#" title="Home">Home</a></li>
-                            <li><a href="#" title="About">About</a></li>
+                            <li><a href="index.html" title="Home">Home</a></li>
+                            <li><a href="about.html" title="About">About</a></li>
                             <li><a href="#" title="Services">Services</a></li>
-                            <li><a href="#" title="Projects">Projects</a></li>
+                            <li><a href="faq.html" title="Projects">FAQ</a></li>
                             <li><a href="#" title="Contact us">Contact us</a></li>
                         </ul>
                     </div>
