code done service page

--- a/faq.html
+++ b/faq.html
@@ -75,18 +75,12 @@
                 <div class="main-navlink">
                     <ul class="navlist">
                         <li><a href="index.html" title="Home">Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About"
+                        <li ><a href="about.html" title="About"
                                 >About</a>
-                            <ul class="sub-menu">
-                                <li><a href="#" title="Who We are"> Who We are </a></li>
-                                <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
-                                <li><a href="faq.html" title="Environmental Health And Safety">Environmental Health And Safety</a></li>
-                                <li><a href="#" title="Executive Team "> Executive Team </a></li>
-                                <li><a href="#" title="Awards Recognitions"> Awards Recognitions </a></li>
-                            </ul>
+                          
 
                         </li>
-                        <li><a href="#" title="Service">Service</a></li>
+                        <li><a href="service.html" title="Service">Service</a></li>
                         <li><a href="projects.html" title="Projects">Projects</a></li>
                         <li><a href="#" title="Testimonials">Testimonials</a></li>
                     </ul>
@@ -257,7 +251,7 @@
                         <ul class="footer-list">
                             <li><a href="index.html" title="Home">Home</a></li>
                             <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="#" title="Services">Services</a></li>
+                            <li><a href="service.html" title="Services">Services</a></li>
                             <li><a href="faq.html" title="Projects">FAQ</a></li>
                             <li><a href="#" title="Contact us">Contact us</a></li>
                         </ul>
