--- a/index.html
+++ b/index.html
@@ -75,16 +75,10 @@
                         <li><a href="index.html" title="Home" class="activlink">Home</a></li>
                         <li class="menu-item-has-children"><a href="about.html" title="About"
                                 >About</a>
-                            <ul class="sub-menu">
-                                <li><a href="#" title="Who We are"> Who We are </a></li>
-                                <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
-                                <li><a href="faq.html" title="Environmental Health And Safety">Environmental Health And Safety</a></li>
-                                <li><a href="#" title="Executive Team "> Executive Team </a></li>
-                                <li><a href="#" title="Awards Recognitions"> Awards Recognitions </a></li>
-                            </ul>
+                            
 
                         </li>
-                        <li><a href="#" title="Service">Service</a></li>
+                        <li><a href="service.html" title="Service">Service</a></li>
                         <li><a href="projects.html" title="Projects">Projects</a></li>
                         <li><a href="#" title="Testimonials">Testimonials</a></li>
                     </ul>
@@ -120,7 +114,7 @@
                     pre-engineered and structural steel buildings, offering industry-leading, customer-centric services
                     that combine quality, speed, and safety.</p>
                 <div class="universal-anchor white">
-                    <a href="#" title="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="about.html" title="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -359,7 +353,7 @@
                             of craftsmanship and the importance of investing in products that enrich our lives in
                             meaningful ways.</p>
                         <div class="universal-anchor blue">
-                            <a href="#" title="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="service.html" title="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -383,7 +377,7 @@
                 <p>We work with architects and designers to produce beautiful, functional structures. Call us today and
                     bring our project management skills and extensive construction experience to your next project.</p>
                 <div class="universal-anchor white">
-                    <a href="#" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="about.html" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -507,7 +501,7 @@
                             quality, speed of execution, and cost efficiency. </p>
 
                         <div class="universal-anchor blue">
-                            <a href="#" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="projects.html" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -558,7 +552,7 @@
             </div>
 
             <div class="universal-anchor blue">
-                <a href="#" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="service.html" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -678,7 +672,7 @@
                         <ul class="footer-list">
                             <li><a href="index.html" title="Home">Home</a></li>
                             <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="#" title="Services">Services</a></li>
+                            <li><a href="service.html" title="Services">Services</a></li>
                             <li><a href="faq.html" title="Projects">FAQ</a></li>
                             <li><a href="#" title="Contact us">Contact us</a></li>
                         </ul>
