--- a/projects.html
+++ b/projects.html
@@ -75,18 +75,8 @@
                 <div class="main-navlink">
                     <ul class="navlist">
                         <li><a href="index.html" title="Home">Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About">About</a>
-                            <ul class="sub-menu">
-                                <li><a href="#" title="Who We are"> Who We are </a></li>
-                                <li><a href="#" title="Mission, Vision Values "> Mission, Vision Values </a></li>
-                                <li><a href="faq.html" title="Environmental Health And Safety">Environmental Health And
-                                        Safety</a></li>
-                                <li><a href="#" title="Executive Team "> Executive Team </a></li>
-                                <li><a href="#" title="Awards Recognitions"> Awards Recognitions </a></li>
-                            </ul>
-
-                        </li>
-                        <li><a href="#" title="Service">Service</a></li>
+                        <li><a href="about.html" title="About">About</a>  </li>
+                        <li><a href="service.html" title="Service">Service</a></li>
                         <li><a href="projects.html" title="Projects" class="activlink">Projects</a></li>
                         <li><a href="#" title="Testimonials">Testimonials</a></li>
                     </ul>
@@ -133,7 +123,7 @@
             </div>
         </div>
         <div class="grid-cutter-images">
-            <div class="cuuterimage">
+            <div class="cuuterimage" data-aos="fade-left" data-aos-duration="2000">
                 <img src="assets/images/faqimage.jpg" alt="">
             </div>
             <div class="cutterdata">
@@ -174,7 +164,7 @@
                 </div>
             </div>
             <div class="grid-projects">
-                <div class="btm-data-crowd-slider">
+                <div class="btm-data-crowd-slider" data-aos="fade-up" data-aos-duration="2000">
                     <a href="#">
                         <div class="slider-main-images">
                             <img src="assets/images/slider-1.jpeg" alt="">
@@ -208,7 +198,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="btm-data-crowd-slider">
+                <div class="btm-data-crowd-slider" data-aos="fade-up" data-aos-duration="2000">
                     <a href="#">
                         <div class="slider-main-images">
                             <img src="assets/images/slider-2.jpeg" alt="">
@@ -242,7 +232,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="btm-data-crowd-slider">
+                <div class="btm-data-crowd-slider" data-aos="fade-up" data-aos-duration="2000">
                     <a href="#">
                         <div class="slider-main-images">
                             <img src="assets/images/slider-3.jpeg" alt="">
@@ -276,7 +266,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="btm-data-crowd-slider">
+                <div class="btm-data-crowd-slider" data-aos="fade-up" data-aos-duration="2000">
                     <a href="#">
                         <div class="slider-main-images">
                             <img src="assets/images/slider-4.jpeg" alt="">
@@ -310,7 +300,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="btm-data-crowd-slider">
+                <div class="btm-data-crowd-slider" data-aos="fade-up" data-aos-duration="2000">
                     <a href="#">
                         <div class="slider-main-images">
                             <img src="assets/images/slider-5.jpeg" alt="">
@@ -344,7 +334,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="btm-data-crowd-slider">
+                <div class="btm-data-crowd-slider" data-aos="fade-up" data-aos-duration="2000">
                     <a href="#">
                         <div class="slider-main-images">
                             <img src="assets/images/quality-image.webp" alt="">
@@ -408,7 +398,7 @@
                         <ul class="footer-list">
                             <li><a href="index.html" title="Home">Home</a></li>
                             <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="#" title="Services">Services</a></li>
+                            <li><a href="service.html" title="Services">Services</a></li>
                             <li><a href="faq.html" title="Projects">FAQ</a></li>
                             <li><a href="#" title="Contact us">Contact us</a></li>
                         </ul>
