--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 
                 <div class="contactntn">
                     <div class="conactlink">
-                        <a href="#" title="Contact Us">Contact Us</a>
+                        <a href="contact.html" title="Contact Us">Contact Us</a>
                         <a href="#" title="get-a-quote">Get a quote</a>
                     </div>
                 </div>
@@ -454,7 +454,7 @@
                             <li><a href="about.html" title="About">About</a></li>
                             <li><a href="service.html" title="Services">Services</a></li>
                             <li><a href="faq.html" title="Projects">FAQ</a></li>
-                            <li><a href="#" title="Contact us">Contact us</a></li>
+                            <li><a href="contact.html" title="Contact us">Contact us</a></li>
                         </ul>
                     </div>
                     <div class="link-holder">
