--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                 <div class="contactntn">
                     <div class="conactlink">
                         <a href="contact.html" title="Contact Us">Contact Us</a>
-                        <a href="#" title="get-a-quote">Get a quote</a>
+                        <a href="get-a-quote.html" title="get-a-quote">Get a quote</a>
                     </div>
                 </div>
             </div>
