--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                 <div class="contactntn">
                     <div class="conactlink">
                         <a href="contact.html"  title="Contact Us">Contact Us</a>
-                        <a href="#" title="get-a-quote">Get a quote</a>
+                        <a href="get-a-quote.html" title="get-a-quote">Get a quote</a>
                     </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@
 
                                 <div class="col-md-12">
                                     <div class="form-floating mb-3">
-                                        <textarea class="form-control" x` placeholder="Leave a comment here"
+                                        <textarea class="form-control"  placeholder="Leave a comment here"
                                             id="floatingTextarea"></textarea>
                                         <label for="floatingTextarea">Messages</label>
                                     </div>
