--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
                 <div class="main-navlink">
                     <ul class="navlist">
                         <li><a href="index.html" title="Home" class="activlink">Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About"
-                                >About</a>
-                            
+                        <li class="menu-item-has-children"><a href="about.html" title="About">About</a>
+
 
                         </li>
                         <li><a href="service.html" title="Service">Service</a></li>
@@ -353,7 +352,8 @@
                             of craftsmanship and the importance of investing in products that enrich our lives in
                             meaningful ways.</p>
                         <div class="universal-anchor blue">
-                            <a href="service.html" title="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="service.html" title="read-more">Read more <i
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -501,7 +501,8 @@
                             quality, speed of execution, and cost efficiency. </p>
 
                         <div class="universal-anchor blue">
-                            <a href="projects.html" title="know-more">Know more <i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="projects.html" title="know-more">Know more <i
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -704,6 +705,14 @@
             <a href="#"> <img src="assets/images/scrltop.svg" alt=""></a>
         </div>
     </footer>
+    <div class="document">
+        <a href="#">
+            <div class="insidedata">
+                <i class="fa-solid fa-book"></i>
+                <p>Get Details</p>
+            </div>
+        </a>
+    </div>
     <!-- FOOTER END -->
 
 
