--- a/faq.html
+++ b/faq.html
@@ -82,7 +82,7 @@
                         </li>
                         <li><a href="service.html" title="Service">Service</a></li>
                         <li><a href="projects.html" title="Projects">Projects</a></li>
-                        <li><a href="#" title="Testimonials">Testimonials</a></li>
+                        <li><a href="testimonial.html" title="Testimonials">Testimonials</a></li>
                     </ul>
                 </div>
 
