--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
                         <li><a href="about.html" title="About">About</a>  </li>
                         <li><a href="service.html" title="Service">Service</a></li>
                         <li><a href="projects.html" title="Projects" class="activlink">Projects</a></li>
-                        <li><a href="#" title="Testimonials">Testimonials</a></li>
+                        <li><a href="testimonial.html" title="Testimonials">Testimonials</a></li>
                     </ul>
                 </div>
 
