--- a/service.html
+++ b/service.html
@@ -81,7 +81,7 @@
                         </li>
                         <li><a href="service.html" title="Service" class="activlink">Service</a></li>
                         <li><a href="projects.html" title="Projects">Projects</a></li>
-                        <li><a href="#" title="Testimonials">Testimonials</a></li>
+                        <li><a href="testimonial.html" title="Testimonials">Testimonials</a></li>
                     </ul>
                 </div>
 
