--- a/about.html
+++ b/about.html
@@ -75,9 +75,8 @@
                 <div class="main-navlink">
                     <ul class="navlist">
                         <li><a href="index.html" title="Home">Home</a></li>
-                        <li ><a href="about.html" title="About"
-                                class="activlink">About</a>
-                         
+                        <li><a href="about.html" title="About" class="activlink">About</a>
+
 
                         </li>
                         <li><a href="service.html" title="Service">Service</a></li>
@@ -362,6 +361,8 @@
     <!-- OUR PROJECT END -->
 
 
+
+
     <!-- OUR TEAM  -->
     <section class="ourteam-sec">
         <div class="container">
@@ -428,7 +429,96 @@
 
 
 
+    <!-- EVENT  -->
+    <section class="oueevent-sec">
+        <div class="container">
+            <div class="grid-choose-us">
+                <div class="title-grid">
+                    <h2 class="sub-title">Our Event .</h2>
+                </div>
 
+                <div class="paragrid">
+                    <p>Furthermore, The Concept Of Being "BUILT FOR QUALITY, BUILT TO LAST" Extends Beyond Mere Physical
+                        Durability. It Encompasses Factors Such As Timeless Design, Intuitive Functionality, And Ongoing
+                        Support Or Maintenance, Ensuring That The Product Remains Relevant And Useful For Years To Come.
+                        This Mindset Reflects A Belief In The Enduring Value Of Craftsmanship And The Importance Of
+                        Investing In Products That Enrich Our Lives In Meaningful Ways.</p>
+                </div>
+            </div>
+            <div class="evenet-container">
+
+                <div class="swiper mySwiperevent">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="projects-holder">
+                                <div class="projects-image">
+                                    <img src="assets/images/project3.webp" alt="projects" height="340" width="510"
+                                        loading="lazy">
+                                </div>
+                                <div class="btm-datahere">
+                                    <span class="projectdate">February 19, 2021 </span>
+                                    <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero
+                                        natus
+                                        recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga,
+                                        nisi
+                                        consectetur earum quis alias dicta eligendi.</p>
+                                    <!-- <div class="readmore-icon">
+                                        <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="projects-holder">
+                                <div class="projects-image">
+                                    <img src="assets/images/project1.webp" alt="projects" height="340" width="510"
+                                        loading="lazy">
+                                </div>
+                                <div class="btm-datahere">
+                                    <span class="projectdate">February 19, 2021 </span>
+                                    <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero
+                                        natus
+                                        recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga,
+                                        nisi
+                                        consectetur earum quis alias dicta eligendi.</p>
+                                    <!-- <div class="readmore-icon">
+                                        <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="projects-holder">
+                                <div class="projects-image">
+                                    <img src="assets/images/project2.webp" alt="projects" height="340" width="510"
+                                        loading="lazy">
+                                </div>
+                                <div class="btm-datahere">
+                                    <span class="projectdate">February 19, 2021 </span>
+                                    <h4 class="mini-title">Lorem ipsum dolor sit amet.</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore vero
+                                        natus
+                                        recusandae maiores nam, id iure ullam veritatis saepe quibusdam itaque fuga,
+                                        nisi
+                                        consectetur earum quis alias dicta eligendi.</p>
+                                    <!-- <div class="readmore-icon">
+                                        <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-btn">
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- EVENT END -->
 
 
 
