--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 <div class="main-navlink">
                     <ul class="navlist">
                         <li><a href="index.html" title="Home" class="activlink">Home</a></li>
-                        <li class="menu-item-has-children"><a href="about.html" title="About">About</a>
+                        <li><a href="about.html" title="About">About</a>
 
 
                         </li>
                         <li><a href="service.html" title="Service">Service</a></li>
                         <li><a href="projects.html" title="Projects">Projects</a></li>
-                        <li><a href="#" title="Testimonials">Testimonials</a></li>
+                        <li><a href="testimonial.html" title="Testimonials">Testimonials</a></li>
                     </ul>
                 </div>
 
